new theme renamed

--- a/companion/src/companion.qrc
+++ b/companion/src/companion.qrc
@@ -981,177 +981,177 @@
     <file>themes/monowhite/48/contributors.png</file>
     <file>themes/monowhite/48/stop.png</file>
     <file>themes/monowhite/48/write_eeprom.png</file>
-    <file>themes/new/16/paintbrush.png</file>
-    <file>themes/new/16/open.png</file>
-    <file>themes/new/16/edit.png</file>
-    <file>themes/new/16/information.png</file>
-    <file>themes/new/16/configure.png</file>
-    <file>themes/new/16/list.png</file>
-    <file>themes/new/16/wizard.png</file>
-    <file>themes/new/16/logs.png</file>
-    <file>themes/new/16/new.png</file>
-    <file>themes/new/16/save.png</file>
-    <file>themes/new/16/recentdocument.png</file>
-    <file>themes/new/16/simulate.png</file>
-    <file>themes/new/16/changelog.png</file>
-    <file>themes/new/16/copy.png</file>
-    <file>themes/new/16/write_flash.png</file>
-    <file>themes/new/16/read_eeprom_file.png</file>
-    <file>themes/new/16/clear.png</file>
-    <file>themes/new/16/play.png</file>
-    <file>themes/new/16/fuses.png</file>
-    <file>themes/new/16/arrow-right.png</file>
-    <file>themes/new/16/exit.png</file>
-    <file>themes/new/16/moveup.png</file>
-    <file>themes/new/16/read_eeprom.png</file>
-    <file>themes/new/16/cut.png</file>
-    <file>themes/new/16/arrow-left.png</file>
-    <file>themes/new/16/write_eeprom_file.png</file>
-    <file>themes/new/16/library.png</file>
-    <file>themes/new/16/profiles.png</file>
-    <file>themes/new/16/paste.png</file>
-    <file>themes/new/16/print.png</file>
-    <file>themes/new/16/compare.png</file>
-    <file>themes/new/16/saveas.png</file>
-    <file>themes/new/16/apppreferences.png</file>
-    <file>themes/new/16/fwpreferences.png</file>
-    <file>themes/new/16/movedown.png</file>
-    <file>themes/new/16/currentmodel.png</file>
-    <file>themes/new/16/read_flash.png</file>
-    <file>themes/new/16/duplicate.png</file>
-    <file>themes/new/16/add.png</file>
-    <file>themes/new/16/update.png</file>
-    <file>themes/new/16/contributors.png</file>
-    <file>themes/new/16/stop.png</file>
-    <file>themes/new/16/write_eeprom.png</file>
-    <file>themes/new/24/paintbrush.png</file>
-    <file>themes/new/24/open.png</file>
-    <file>themes/new/24/edit.png</file>
-    <file>themes/new/24/information.png</file>
-    <file>themes/new/24/configure.png</file>
-    <file>themes/new/24/list.png</file>
-    <file>themes/new/24/wizard.png</file>
-    <file>themes/new/24/logs.png</file>
-    <file>themes/new/24/new.png</file>
-    <file>themes/new/24/save.png</file>
-    <file>themes/new/24/recentdocument.png</file>
-    <file>themes/new/24/simulate.png</file>
-    <file>themes/new/24/changelog.png</file>
-    <file>themes/new/24/copy.png</file>
-    <file>themes/new/24/write_flash.png</file>
-    <file>themes/new/24/read_eeprom_file.png</file>
-    <file>themes/new/24/clear.png</file>
-    <file>themes/new/24/play.png</file>
-    <file>themes/new/24/fuses.png</file>
-    <file>themes/new/24/arrow-right.png</file>
-    <file>themes/new/24/exit.png</file>
-    <file>themes/new/24/moveup.png</file>
-    <file>themes/new/24/read_eeprom.png</file>
-    <file>themes/new/24/cut.png</file>
-    <file>themes/new/24/arrow-left.png</file>
-    <file>themes/new/24/write_eeprom_file.png</file>
-    <file>themes/new/24/library.png</file>
-    <file>themes/new/24/profiles.png</file>
-    <file>themes/new/24/paste.png</file>
-    <file>themes/new/24/print.png</file>
-    <file>themes/new/24/compare.png</file>
-    <file>themes/new/24/saveas.png</file>
-    <file>themes/new/24/apppreferences.png</file>
-    <file>themes/new/24/fwpreferences.png</file>
-    <file>themes/new/24/movedown.png</file>
-    <file>themes/new/24/currentmodel.png</file>
-    <file>themes/new/24/read_flash.png</file>
-    <file>themes/new/24/duplicate.png</file>
-    <file>themes/new/24/add.png</file>
-    <file>themes/new/24/update.png</file>
-    <file>themes/new/24/contributors.png</file>
-    <file>themes/new/24/stop.png</file>
-    <file>themes/new/24/write_eeprom.png</file>
-    <file>themes/new/32/paintbrush.png</file>
-    <file>themes/new/32/open.png</file>
-    <file>themes/new/32/edit.png</file>
-    <file>themes/new/32/information.png</file>
-    <file>themes/new/32/configure.png</file>
-    <file>themes/new/32/list.png</file>
-    <file>themes/new/32/wizard.png</file>
-    <file>themes/new/32/logs.png</file>
-    <file>themes/new/32/new.png</file>
-    <file>themes/new/32/save.png</file>
-    <file>themes/new/32/recentdocument.png</file>
-    <file>themes/new/32/simulate.png</file>
-    <file>themes/new/32/changelog.png</file>
-    <file>themes/new/32/copy.png</file>
-    <file>themes/new/32/write_flash.png</file>
-    <file>themes/new/32/read_eeprom_file.png</file>
-    <file>themes/new/32/clear.png</file>
-    <file>themes/new/32/play.png</file>
-    <file>themes/new/32/fuses.png</file>
-    <file>themes/new/32/arrow-right.png</file>
-    <file>themes/new/32/exit.png</file>
-    <file>themes/new/32/moveup.png</file>
-    <file>themes/new/32/read_eeprom.png</file>
-    <file>themes/new/32/cut.png</file>
-    <file>themes/new/32/arrow-left.png</file>
-    <file>themes/new/32/write_eeprom_file.png</file>
-    <file>themes/new/32/library.png</file>
-    <file>themes/new/32/profiles.png</file>
-    <file>themes/new/32/paste.png</file>
-    <file>themes/new/32/print.png</file>
-    <file>themes/new/32/compare.png</file>
-    <file>themes/new/32/saveas.png</file>
-    <file>themes/new/32/apppreferences.png</file>
-    <file>themes/new/32/fwpreferences.png</file>
-    <file>themes/new/32/movedown.png</file>
-    <file>themes/new/32/currentmodel.png</file>
-    <file>themes/new/32/read_flash.png</file>
-    <file>themes/new/32/duplicate.png</file>
-    <file>themes/new/32/add.png</file>
-    <file>themes/new/32/update.png</file>
-    <file>themes/new/32/contributors.png</file>
-    <file>themes/new/32/stop.png</file>
-    <file>themes/new/32/write_eeprom.png</file>
-    <file>themes/new/48/paintbrush.png</file>
-    <file>themes/new/48/open.png</file>
-    <file>themes/new/48/edit.png</file>
-    <file>themes/new/48/information.png</file>
-    <file>themes/new/48/configure.png</file>
-    <file>themes/new/48/list.png</file>
-    <file>themes/new/48/wizard.png</file>
-    <file>themes/new/48/logs.png</file>
-    <file>themes/new/48/new.png</file>
-    <file>themes/new/48/save.png</file>
-    <file>themes/new/48/recentdocument.png</file>
-    <file>themes/new/48/simulate.png</file>
-    <file>themes/new/48/changelog.png</file>
-    <file>themes/new/48/copy.png</file>
-    <file>themes/new/48/write_flash.png</file>
-    <file>themes/new/48/read_eeprom_file.png</file>
-    <file>themes/new/48/clear.png</file>
-    <file>themes/new/48/play.png</file>
-    <file>themes/new/48/fuses.png</file>
-    <file>themes/new/48/arrow-right.png</file>
-    <file>themes/new/48/exit.png</file>
-    <file>themes/new/48/moveup.png</file>
-    <file>themes/new/48/read_eeprom.png</file>
-    <file>themes/new/48/cut.png</file>
-    <file>themes/new/48/arrow-left.png</file>
-    <file>themes/new/48/write_eeprom_file.png</file>
-    <file>themes/new/48/library.png</file>
-    <file>themes/new/48/profiles.png</file>
-    <file>themes/new/48/paste.png</file>
-    <file>themes/new/48/print.png</file>
-    <file>themes/new/48/compare.png</file>
-    <file>themes/new/48/saveas.png</file>
-    <file>themes/new/48/apppreferences.png</file>
-    <file>themes/new/48/fwpreferences.png</file>
-    <file>themes/new/48/movedown.png</file>
-    <file>themes/new/48/currentmodel.png</file>
-    <file>themes/new/48/read_flash.png</file>
-    <file>themes/new/48/duplicate.png</file>
-    <file>themes/new/48/add.png</file>
-    <file>themes/new/48/update.png</file>
-    <file>themes/new/48/contributors.png</file>
-    <file>themes/new/48/stop.png</file>
-    <file>themes/new/48/write_eeprom.png</file>
+    <file>themes/yerico/16/paintbrush.png</file>
+    <file>themes/yerico/16/open.png</file>
+    <file>themes/yerico/16/edit.png</file>
+    <file>themes/yerico/16/information.png</file>
+    <file>themes/yerico/16/configure.png</file>
+    <file>themes/yerico/16/list.png</file>
+    <file>themes/yerico/16/wizard.png</file>
+    <file>themes/yerico/16/logs.png</file>
+    <file>themes/yerico/16/new.png</file>
+    <file>themes/yerico/16/save.png</file>
+    <file>themes/yerico/16/recentdocument.png</file>
+    <file>themes/yerico/16/simulate.png</file>
+    <file>themes/yerico/16/changelog.png</file>
+    <file>themes/yerico/16/copy.png</file>
+    <file>themes/yerico/16/write_flash.png</file>
+    <file>themes/yerico/16/read_eeprom_file.png</file>
+    <file>themes/yerico/16/clear.png</file>
+    <file>themes/yerico/16/play.png</file>
+    <file>themes/yerico/16/fuses.png</file>
+    <file>themes/yerico/16/arrow-right.png</file>
+    <file>themes/yerico/16/exit.png</file>
+    <file>themes/yerico/16/moveup.png</file>
+    <file>themes/yerico/16/read_eeprom.png</file>
+    <file>themes/yerico/16/cut.png</file>
+    <file>themes/yerico/16/arrow-left.png</file>
+    <file>themes/yerico/16/write_eeprom_file.png</file>
+    <file>themes/yerico/16/library.png</file>
+    <file>themes/yerico/16/profiles.png</file>
+    <file>themes/yerico/16/paste.png</file>
+    <file>themes/yerico/16/print.png</file>
+    <file>themes/yerico/16/compare.png</file>
+    <file>themes/yerico/16/saveas.png</file>
+    <file>themes/yerico/16/apppreferences.png</file>
+    <file>themes/yerico/16/fwpreferences.png</file>
+    <file>themes/yerico/16/movedown.png</file>
+    <file>themes/yerico/16/currentmodel.png</file>
+    <file>themes/yerico/16/read_flash.png</file>
+    <file>themes/yerico/16/duplicate.png</file>
+    <file>themes/yerico/16/add.png</file>
+    <file>themes/yerico/16/update.png</file>
+    <file>themes/yerico/16/contributors.png</file>
+    <file>themes/yerico/16/stop.png</file>
+    <file>themes/yerico/16/write_eeprom.png</file>
+    <file>themes/yerico/24/paintbrush.png</file>
+    <file>themes/yerico/24/open.png</file>
+    <file>themes/yerico/24/edit.png</file>
+    <file>themes/yerico/24/information.png</file>
+    <file>themes/yerico/24/configure.png</file>
+    <file>themes/yerico/24/list.png</file>
+    <file>themes/yerico/24/wizard.png</file>
+    <file>themes/yerico/24/logs.png</file>
+    <file>themes/yerico/24/new.png</file>
+    <file>themes/yerico/24/save.png</file>
+    <file>themes/yerico/24/recentdocument.png</file>
+    <file>themes/yerico/24/simulate.png</file>
+    <file>themes/yerico/24/changelog.png</file>
+    <file>themes/yerico/24/copy.png</file>
+    <file>themes/yerico/24/write_flash.png</file>
+    <file>themes/yerico/24/read_eeprom_file.png</file>
+    <file>themes/yerico/24/clear.png</file>
+    <file>themes/yerico/24/play.png</file>
+    <file>themes/yerico/24/fuses.png</file>
+    <file>themes/yerico/24/arrow-right.png</file>
+    <file>themes/yerico/24/exit.png</file>
+    <file>themes/yerico/24/moveup.png</file>
+    <file>themes/yerico/24/read_eeprom.png</file>
+    <file>themes/yerico/24/cut.png</file>
+    <file>themes/yerico/24/arrow-left.png</file>
+    <file>themes/yerico/24/write_eeprom_file.png</file>
+    <file>themes/yerico/24/library.png</file>
+    <file>themes/yerico/24/profiles.png</file>
+    <file>themes/yerico/24/paste.png</file>
+    <file>themes/yerico/24/print.png</file>
+    <file>themes/yerico/24/compare.png</file>
+    <file>themes/yerico/24/saveas.png</file>
+    <file>themes/yerico/24/apppreferences.png</file>
+    <file>themes/yerico/24/fwpreferences.png</file>
+    <file>themes/yerico/24/movedown.png</file>
+    <file>themes/yerico/24/currentmodel.png</file>
+    <file>themes/yerico/24/read_flash.png</file>
+    <file>themes/yerico/24/duplicate.png</file>
+    <file>themes/yerico/24/add.png</file>
+    <file>themes/yerico/24/update.png</file>
+    <file>themes/yerico/24/contributors.png</file>
+    <file>themes/yerico/24/stop.png</file>
+    <file>themes/yerico/24/write_eeprom.png</file>
+    <file>themes/yerico/32/paintbrush.png</file>
+    <file>themes/yerico/32/open.png</file>
+    <file>themes/yerico/32/edit.png</file>
+    <file>themes/yerico/32/information.png</file>
+    <file>themes/yerico/32/configure.png</file>
+    <file>themes/yerico/32/list.png</file>
+    <file>themes/yerico/32/wizard.png</file>
+    <file>themes/yerico/32/logs.png</file>
+    <file>themes/yerico/32/new.png</file>
+    <file>themes/yerico/32/save.png</file>
+    <file>themes/yerico/32/recentdocument.png</file>
+    <file>themes/yerico/32/simulate.png</file>
+    <file>themes/yerico/32/changelog.png</file>
+    <file>themes/yerico/32/copy.png</file>
+    <file>themes/yerico/32/write_flash.png</file>
+    <file>themes/yerico/32/read_eeprom_file.png</file>
+    <file>themes/yerico/32/clear.png</file>
+    <file>themes/yerico/32/play.png</file>
+    <file>themes/yerico/32/fuses.png</file>
+    <file>themes/yerico/32/arrow-right.png</file>
+    <file>themes/yerico/32/exit.png</file>
+    <file>themes/yerico/32/moveup.png</file>
+    <file>themes/yerico/32/read_eeprom.png</file>
+    <file>themes/yerico/32/cut.png</file>
+    <file>themes/yerico/32/arrow-left.png</file>
+    <file>themes/yerico/32/write_eeprom_file.png</file>
+    <file>themes/yerico/32/library.png</file>
+    <file>themes/yerico/32/profiles.png</file>
+    <file>themes/yerico/32/paste.png</file>
+    <file>themes/yerico/32/print.png</file>
+    <file>themes/yerico/32/compare.png</file>
+    <file>themes/yerico/32/saveas.png</file>
+    <file>themes/yerico/32/apppreferences.png</file>
+    <file>themes/yerico/32/fwpreferences.png</file>
+    <file>themes/yerico/32/movedown.png</file>
+    <file>themes/yerico/32/currentmodel.png</file>
+    <file>themes/yerico/32/read_flash.png</file>
+    <file>themes/yerico/32/duplicate.png</file>
+    <file>themes/yerico/32/add.png</file>
+    <file>themes/yerico/32/update.png</file>
+    <file>themes/yerico/32/contributors.png</file>
+    <file>themes/yerico/32/stop.png</file>
+    <file>themes/yerico/32/write_eeprom.png</file>
+    <file>themes/yerico/48/paintbrush.png</file>
+    <file>themes/yerico/48/open.png</file>
+    <file>themes/yerico/48/edit.png</file>
+    <file>themes/yerico/48/information.png</file>
+    <file>themes/yerico/48/configure.png</file>
+    <file>themes/yerico/48/list.png</file>
+    <file>themes/yerico/48/wizard.png</file>
+    <file>themes/yerico/48/logs.png</file>
+    <file>themes/yerico/48/new.png</file>
+    <file>themes/yerico/48/save.png</file>
+    <file>themes/yerico/48/recentdocument.png</file>
+    <file>themes/yerico/48/simulate.png</file>
+    <file>themes/yerico/48/changelog.png</file>
+    <file>themes/yerico/48/copy.png</file>
+    <file>themes/yerico/48/write_flash.png</file>
+    <file>themes/yerico/48/read_eeprom_file.png</file>
+    <file>themes/yerico/48/clear.png</file>
+    <file>themes/yerico/48/play.png</file>
+    <file>themes/yerico/48/fuses.png</file>
+    <file>themes/yerico/48/arrow-right.png</file>
+    <file>themes/yerico/48/exit.png</file>
+    <file>themes/yerico/48/moveup.png</file>
+    <file>themes/yerico/48/read_eeprom.png</file>
+    <file>themes/yerico/48/cut.png</file>
+    <file>themes/yerico/48/arrow-left.png</file>
+    <file>themes/yerico/48/write_eeprom_file.png</file>
+    <file>themes/yerico/48/library.png</file>
+    <file>themes/yerico/48/profiles.png</file>
+    <file>themes/yerico/48/paste.png</file>
+    <file>themes/yerico/48/print.png</file>
+    <file>themes/yerico/48/compare.png</file>
+    <file>themes/yerico/48/saveas.png</file>
+    <file>themes/yerico/48/apppreferences.png</file>
+    <file>themes/yerico/48/fwpreferences.png</file>
+    <file>themes/yerico/48/movedown.png</file>
+    <file>themes/yerico/48/currentmodel.png</file>
+    <file>themes/yerico/48/read_flash.png</file>
+    <file>themes/yerico/48/duplicate.png</file>
+    <file>themes/yerico/48/add.png</file>
+    <file>themes/yerico/48/update.png</file>
+    <file>themes/yerico/48/contributors.png</file>
+    <file>themes/yerico/48/stop.png</file>
+    <file>themes/yerico/48/write_eeprom.png</file>
   </qresource>
 </RCC>
