Corrected a number of smaller issuses in the GUI. A new profile now keeps the values from the current profile. Removed the special handling of the Name field in profiles.

--- a/companion/src/apppreferencesdialog.ui
+++ b/companion/src/apppreferencesdialog.ui
@@ -26,11 +26,20 @@
    <string>Edit Settings</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="leftMargin">
+    <number>6</number>
+   </property>
+   <property name="topMargin">
+    <number>6</number>
+   </property>
+   <property name="rightMargin">
+    <number>6</number>
+   </property>
+   <property name="bottomMargin">
+    <number>6</number>
+   </property>
    <property name="verticalSpacing">
     <number>2</number>
-   </property>
-   <property name="margin">
-    <number>6</number>
    </property>
    <item row="2" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
@@ -490,7 +499,7 @@
      </widget>
      <widget class="QWidget" name="profileTab">
       <attribute name="title">
-       <string>Radio Settings</string>
+       <string>Radio Settings Profile</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="10" column="1" colspan="4">
@@ -720,7 +729,7 @@ This is used by the templated to determine which channel goes to what number out
        <item row="0" column="0">
         <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>Settings Profile</string>
+          <string>Profile Name</string>
          </property>
         </widget>
        </item>
