--- a/companion/src/splashlibrary.ui
+++ b/companion/src/splashlibrary.ui
@@ -6,21 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>662</width>
-    <height>356</height>
+    <width>650</width>
+    <height>374</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>662</width>
-    <height>356</height>
-   </size>
   </property>
   <property name="windowTitle">
    <string/>
@@ -39,8 +33,14 @@
      </property>
      <property name="minimumSize">
       <size>
-       <width>50</width>
+       <width>34</width>
        <height>0</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>34</width>
+       <height>16777215</height>
       </size>
      </property>
      <property name="text">
@@ -54,12 +54,15 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="1">
+   <item row="0" column="2">
     <layout class="QGridLayout" name="gridLayout">
+     <property name="sizeConstraint">
+      <enum>QLayout::SetNoConstraint</enum>
+     </property>
      <item row="0" column="0">
       <widget class="splashLabel" name="FwImage_01">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -72,7 +75,7 @@
        </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -105,7 +108,7 @@
      <item row="0" column="1">
       <widget class="splashLabel" name="FwImage_02">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -113,55 +116,12 @@
        <property name="minimumSize">
         <size>
          <width>130</width>
-         <height>66</height>
+         <height>0</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
-         <height>66</height>
-        </size>
-       </property>
-       <property name="mouseTracking">
-        <bool>true</bool>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">border:1px;</string>
-       </property>
-       <property name="frameShape">
-        <enum>QFrame::Panel</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Plain</enum>
-       </property>
-       <property name="lineWidth">
-        <number>0</number>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="scaledContents">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="splashLabel" name="FwImage_03">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>130</width>
-         <height>66</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -191,7 +151,7 @@
      <item row="0" column="3">
       <widget class="splashLabel" name="FwImage_04">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -199,12 +159,12 @@
        <property name="minimumSize">
         <size>
          <width>130</width>
-         <height>66</height>
+         <height>0</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -234,20 +194,20 @@
      <item row="1" column="0">
       <widget class="splashLabel" name="FwImage_05">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="minimumSize">
         <size>
-         <width>130</width>
+         <width>0</width>
          <height>66</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -277,20 +237,14 @@
      <item row="1" column="1">
       <widget class="splashLabel" name="FwImage_06">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="minimumSize">
-        <size>
-         <width>130</width>
-         <height>66</height>
-        </size>
-       </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -320,20 +274,14 @@
      <item row="1" column="2">
       <widget class="splashLabel" name="FwImage_07">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="minimumSize">
-        <size>
-         <width>130</width>
-         <height>66</height>
-        </size>
-       </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -363,20 +311,14 @@
      <item row="1" column="3">
       <widget class="splashLabel" name="FwImage_08">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="minimumSize">
-        <size>
-         <width>130</width>
-         <height>66</height>
-        </size>
-       </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -406,20 +348,20 @@
      <item row="2" column="0">
       <widget class="splashLabel" name="FwImage_09">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="minimumSize">
         <size>
-         <width>130</width>
+         <width>0</width>
          <height>66</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -449,20 +391,14 @@
      <item row="2" column="1">
       <widget class="splashLabel" name="FwImage_10">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="minimumSize">
-        <size>
-         <width>130</width>
-         <height>66</height>
-        </size>
-       </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -492,20 +428,14 @@
      <item row="2" column="2">
       <widget class="splashLabel" name="FwImage_11">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="minimumSize">
-        <size>
-         <width>130</width>
-         <height>66</height>
-        </size>
-       </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -535,20 +465,14 @@
      <item row="2" column="3">
       <widget class="splashLabel" name="FwImage_12">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="minimumSize">
-        <size>
-         <width>130</width>
-         <height>66</height>
-        </size>
-       </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -578,20 +502,20 @@
      <item row="3" column="0">
       <widget class="splashLabel" name="FwImage_13">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="minimumSize">
         <size>
-         <width>130</width>
+         <width>0</width>
          <height>66</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -621,20 +545,14 @@
      <item row="3" column="1">
       <widget class="splashLabel" name="FwImage_14">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="minimumSize">
-        <size>
-         <width>130</width>
-         <height>66</height>
-        </size>
-       </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -664,20 +582,14 @@
      <item row="3" column="2">
       <widget class="splashLabel" name="FwImage_15">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="minimumSize">
-        <size>
-         <width>130</width>
-         <height>66</height>
-        </size>
-       </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -707,20 +619,14 @@
      <item row="3" column="3">
       <widget class="splashLabel" name="FwImage_16">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="minimumSize">
-        <size>
-         <width>130</width>
-         <height>66</height>
-        </size>
-       </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -750,20 +656,20 @@
      <item row="4" column="0">
       <widget class="splashLabel" name="FwImage_17">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="minimumSize">
         <size>
-         <width>130</width>
+         <width>0</width>
          <height>66</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -793,20 +699,14 @@
      <item row="4" column="1">
       <widget class="splashLabel" name="FwImage_18">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="minimumSize">
-        <size>
-         <width>130</width>
-         <height>66</height>
-        </size>
-       </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -836,20 +736,14 @@
      <item row="4" column="2">
       <widget class="splashLabel" name="FwImage_19">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="minimumSize">
-        <size>
-         <width>130</width>
-         <height>66</height>
-        </size>
-       </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -879,7 +773,44 @@
      <item row="4" column="3">
       <widget class="splashLabel" name="FwImage_20">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>214</width>
+         <height>66</height>
+        </size>
+       </property>
+       <property name="mouseTracking">
+        <bool>true</bool>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">border:1px;</string>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::Panel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Plain</enum>
+       </property>
+       <property name="lineWidth">
+        <number>0</number>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="scaledContents">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="splashLabel" name="FwImage_03">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -887,12 +818,12 @@
        <property name="minimumSize">
         <size>
          <width>130</width>
-         <height>66</height>
+         <height>0</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>130</width>
+         <width>214</width>
          <height>66</height>
         </size>
        </property>
@@ -921,7 +852,7 @@
      </item>
     </layout>
    </item>
-   <item row="0" column="2">
+   <item row="0" column="4">
     <widget class="QToolButton" name="nextPage">
      <property name="enabled">
       <bool>false</bool>
@@ -934,8 +865,14 @@
      </property>
      <property name="minimumSize">
       <size>
-       <width>50</width>
+       <width>34</width>
        <height>0</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>34</width>
+       <height>16777215</height>
       </size>
      </property>
      <property name="text">
@@ -948,6 +885,32 @@
       </size>
      </property>
     </widget>
+   </item>
+   <item row="0" column="1">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="0" column="3">
+    <spacer name="horizontalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
