--- a/companion/src/fwpreferencesdialog.ui
+++ b/companion/src/fwpreferencesdialog.ui
@@ -157,7 +157,11 @@
     </widget>
    </item>
    <item row="3" column="2" colspan="3">
-    <widget class="QComboBox" name="downloadVerCB"/>
+    <widget class="QComboBox" name="downloadVerCB">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+    </widget>
    </item>
    <item row="7" column="2">
     <widget class="QComboBox" name="langCombo">
