Wizard fully functional on GUI level. Right click on model slot to test. No functionality whatsoever on the logical level! Completely harmless to run.

--- a/companion/src/companion.qrc
+++ b/companion/src/companion.qrc
@@ -60,6 +60,7 @@
     <file>images/wizard/ailerons.png</file>
     <file>images/wizard/airbrakes.png</file>
     <file>images/wizard/bank.png</file> 
+    <file>images/wizard/conclusion.png</file>
     <file>images/wizard/cyclic.png</file>
     <file>images/wizard/fblheli.png</file>
     <file>images/wizard/flaps.png</file>
@@ -68,10 +69,12 @@
     <file>images/wizard/helictrl.png</file>
     <file>images/wizard/models.png</file>
     <file>images/wizard/multirotor.png</file>
+    <file>images/wizard/rudder.png</file>
     <file>images/wizard/simpletail.png</file>
     <file>images/wizard/tail.png</file>
     <file>images/wizard/tails.png</file>
     <file>images/wizard/throttle.png</file>
+    <file>images/wizard/wingtype.png</file>
     <file>images/library/00001.png</file>
     <file>images/library/00002.png</file>
     <file>images/library/00003.png</file>
