Data handling added. I have used the simplest possible channel class. An array with these channels are filled throughout the wizard, forming a simplistic mix table that can be passed on and inserted in the real mixer. The simple mixer is fully functional for planes and multicopters. I have to read up on how helicopters are controlled. Currently that part is done wrong since I have no idea about how to set up helicopter mixes.

--- a/companion/src/companion.qrc
+++ b/companion/src/companion.qrc
@@ -74,6 +74,7 @@
     <file>images/wizard/tail.png</file>
     <file>images/wizard/tails.png</file>
     <file>images/wizard/throttle.png</file>
+    <file>images/wizard/vtail.png</file>
     <file>images/wizard/wingtype.png</file>
     <file>images/library/00001.png</file>
     <file>images/library/00002.png</file>
