--- a/speaker/aboutWindow.xaml
+++ b/speaker/aboutWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="OpenTXspeak.AboutWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="OpenTX About Window" Height="273" Width="335" Icon="/OpenTXspeak;component/icon.ico" Background="Black">
+        Title="OpenTX About Window" Height="241" Width="330" Icon="/OpenTXspeak;component/icon.ico" Background="Gray">
     <Grid>
         <StackPanel>
             <StackPanel Orientation="Horizontal">
@@ -19,8 +19,8 @@
             </StackPanel>
             <Label Content="Copyright" Name="lblCopyright"  Foreground="White"/>
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="TextBlock" Name="description" Height="106" Margin="5,5,5,0" TextWrapping="Wrap" Width="175"  Foreground="White"/>
-                <Image Source="/OpenTXspeak;component/icon.ico" Stretch="Uniform" />
+                <TextBlock Text="TextBlock" Name="description" Height="88" Margin="5,5,10,0" TextWrapping="Wrap" Width="200"  Foreground="White"/>
+                <Image Source="/OpenTXspeak;component/icon.ico" Stretch="Uniform" Height="90" Width="90" />
             </StackPanel>
         </StackPanel>
     </Grid>
